bk_ida/gccida/g1/output_asm_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3702:25: error: use of undeclared identifier 'off_6376D2'
fprintf( asm_out_file, &off_6376D2[1], ( unsigned int)insn_counter); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3707:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v10 = sch_istable[( unsigned __int8)v8]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3712:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( ( unsigned __int8 *)v2 + 2)] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3765:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( ( unsigned __int8 *)v2 + 2)] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3769:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[*( unsigned __int8 *)v14] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3788:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)v3] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/final.c:3792:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[*( unsigned __int8 *)v3] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_asm_insn/src/obj/final.o] Error 1
